# Ticket-System-2024

./: .gitignore  CMakeLists.txt  code  code.cpp
src/: Box.hpp  Login.hpp  Queue.cpp  RemSeat.hpp  Station.cpp  Struct.hpp  Train.cpp  Train.hpp  User.hpp
src/Components/: map.hpp
src/Stream/: output.cpp  output.hpp
src/Tools/: TokenScanner.cpp  TokenScanner.hpp
structure/: Box.cpp  Comparison.hpp  Database.hpp  Login.cpp  Login.hpp  Order.cpp  Order.hpp  Queue.cpp  Queue.hpp  RemSeat.cpp  Station.cpp  Station.hpp  Train.cpp  Train.hpp  User.cpp  User.hpp
structure/Components/: map.hpp
structure/Stream/: output.cpp
structure/Tools/: function.hpp
